--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "obehave"
+    "test": "obehave test --port 3000"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Obehave-testing/deployhq-example#readme",
   "dependencies": {
     "express": "4.14.0",
+    "obehave": "1.0.2",
     "path": "0.12.7"
   }
 }
